objects/ServiceMax_Vendor_Account__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>ServiceMax Vendor Accounts</relationshipLabel>
        <relationshipName>ServiceMax_Vendor_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Address_1__c &amp; IF(Address_1__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; Address_2__c &amp; IF(Address_2__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; City__c &amp; IF(City__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; State__r.Name &amp; IF(State__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;)&amp; ZIP__c &amp; IF(ZIP__c &lt;&gt; &quot;&quot;, &quot;, &quot;, &quot;&quot;) &amp; Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Plant__c</fullName>
        <label>Move Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Storage_Location__c</fullName>
        <label>Move Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Region</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>ServiceMax Vendor Accounts</relationshipLabel>
        <relationshipName>ServiceMax_Vendor_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>ServiceMax Vendor Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vendor Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceMax Vendor Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>